[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Triggers/DialogTrigger.gd" type="Script" id=1]
[ext_resource path="res://Fonts/PressStart_Res/Pixel_font_small.tres" type="DynamicFont" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 64 )

[node name="DialogTrigger" type="Area2D"]
z_index = 6
z_as_relative = false
collision_layer = 0
collision_mask = 1024
script = ExtResource( 1 )

[node name="TriggeringCollider" type="CollisionShape2D" parent="."]
position = Vector2( -32, 64 )
shape = SubResource( 1 )

[node name="DialogFrame" type="ColorRect" parent="."]
margin_left = 13.0
margin_top = -53.0
margin_right = 333.0
margin_bottom = 32.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Container" type="MarginContainer" parent="DialogFrame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBackground" type="ColorRect" parent="DialogFrame/Container"]
margin_left = 3.0
margin_top = 3.0
margin_right = 317.0
margin_bottom = 82.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextContainer" type="MarginContainer" parent="DialogFrame/Container/DialogBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLabel" type="Label" parent="DialogFrame/Container/DialogBackground/TextContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 304.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Dialog"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHintFrame" type="ColorRect" parent="."]
margin_left = 22.0
margin_top = 22.0
margin_right = 82.0
margin_bottom = 59.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HintTextContainer" type="MarginContainer" parent="ButtonHintFrame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HintTextBackground" type="ColorRect" parent="ButtonHintFrame/HintTextContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 57.0
margin_bottom = 34.0
color = Color( 0, 0, 0, 1 )

[node name="ButtonHintText" type="Label" parent="ButtonHintFrame/HintTextContainer/HintTextBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "e"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogButton" type="Button" parent="."]
margin_top = -55.0
margin_right = 350.0
margin_bottom = 65.0
rect_min_size = Vector2( 350, 120 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="DialogButton" to="." method="_on_Button_pressed"]
